# vinted

./: .gitignore  AGENTS.md  CLAUDE.md  DATA_FIELDS_GUIDE.md  GEMINI.md  HELP_REFERENCE.md  PLATFORM_SUPPORT.md  PRD.md  PROJECT_SUMMARY.md  README.md  SCRAPER_BEHAVIOR.md  SESSION_SUMMARY.md  SETUP_COMPLETE.md  UPDATES.md  WEBUI_README.md  alembic.ini  cookies.pk  ecosystem.config.cjs  ensure_sources.py  new_crontab  pyproject.toml  run-scraper-cron.sh  start_server.sh  update_platform_colors.py  vinted-cron
.taskmaster/: config.json  state.json
.taskmaster/docs/: all_docs_prd.md
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
app/: cli.py  config.py  ingest.py  postprocess.py  scheduler.py  verify_status.py
app/api/: main.py  schemas.py
app/data/: __init__.py  taxonomy.py
app/db/: models.py  session.py
app/proxies/: fetch_and_test.py
app/scraper/: __init__.py  browser.py  parse_detail.py  parse_header.py  session_warmup.py  session_warmup_browser.py  vinted_client.py
app/scrapy_worker/: __init__.py  http.py  items.py  pipelines.py  runner.py  settings.py
app/scrapy_worker/spiders/: details_spider.py
app/utils/: categories.py  clean.py  conditions.py  details.py  language.py  logging.py  retry.py  title_corrector.py  url.py
fastAPI/: README.md  __init__.py  dependencies.py  main.py  redis.py  schemas.py
fastAPI/routers/: __init__.py  configs.py  cron.py  details.py  listings.py  stats.py  taxonomy.py
fastAPI/services/: details.py  scraper copy.py  scraper.py
frontend/: README.md  index.html  next.config.ts  package-lock.json  package.json  sentry.client.config.ts
frontend/src/app/: layout.tsx  page.tsx
migrations/: 001_add_source_column.sql  004_add_taxonomy_tables.sql  005_link_listing_taxonomy.sql  007_add_is_visible_column.sql  README.md
migrations_backup/: 002_expand_scrape_configs.sql  003_add_healthcheck_ping.sql  006_add_color_columns.sql  README.md
scripts/: backfill_listing_taxonomy.py  log_rotator.sh  seed_taxonomy.py
test/: check_vinted.sh  hybrid_detail.py  parse_detail.py  wrapper.py
(+25 files in other folders)
